@@ -49,6 +49,12 @@ mdds 0.9.0
   * get_numeric(), get_boolean(), and get_string() are made more
     efficient.
 
+  * added position() method that returns a reference object to an
+    element.
+
+  * added variants of get_numeric(), get_boolean() and get_string()
+    that retrieves elements from reference objects.
+
 mdds 0.8.1
 
 * multi_type_vector
